--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+.background {
+color:black;
+}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -8,14 +11,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #000000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
