--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .App {
   text-align: center;
+  background-color:#000000;
+  
 }
-.background {
-color:black;
+.background  {
+color:#000000;
 }
 
 .App-logo {
