--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,14 @@
-.App {
+.logo {
+  text-align: left;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.start {
   text-align: center;
-  background-color:#000000;
-  color:#000000;
-  
-}
-
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
   background-color: #000000;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: black;
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
